<resources>
    <string name="app_name">ساعت کار</string>
    <string name="title_activity_job">My Job</string>
    <string name="open_menu">مشاهده منو</string>
    <string name="new_job">Add Job</string>
    <string name="enter_job">Enter New Job</string>
    <string name="enter_time">ساعت ورود</string>
    <string name="exit_time">ساعت خروج</string>
    <string name="date">تاریخ</string>
    <string name="submit">ثبت</string>
    <string name="title">Job Time Calculator</string>
    <string name="jobName">Job Name</string>
    <string name="payDay">روز محاسبه حقوق در ماه</string>
    <string name="totalTime">Total Time</string>
    <string name="monthTime">کارکرد این ماه:</string>
    <string name="weekTime">کارکرد این هفته:</string>
    <string name="addJob">افزودن شغل</string>
    <string name="cancel">انصراف</string>
    <string name="show_item">نمایش</string>
    <string name="remove">حذف</string>
    <string name="edit">ویرایش</string>
    <string name="addTime">افزودن ساعت ورود و خروج</string>
    <string name="add">افزودن</string>
    <string name="job_title">عنوان شغل</string>
    <string name="time_enter_error">ساعت ورود درست نیست</string>
    <string name="time_enter_error_empty">ساعت ورود خالی است</string>
    <string name="enter_before_exit_error">ساعت ورود قبل از ساعت خروج است</string>
    <string name="time_exit_error">ساعت خروج درست نیست</string>
    <string name="time_exit_error_empty">ساعت خروج خالی است</string>
    <string name="date_error">تاریخ درست نیست</string>
    <string name="date_error_empty">تاریخ خالی است</string>
    <string name="today">امروز</string>
    <string name="add_new_job">افزودن شغل جدید</string>
    <string name="annual_report">گزارش سالیانه</string>
    <string name="show_job_list">مشاهده لیست مشاغل</string>
    <string name="month_detail_hour">مشاهده ریز کارکرد ماهیانه</string>
    <string name="month">ماه</string>
    <string name="month_prompt">انتخاب ماه</string>
    <string name="year_choose">انتخاب سال</string>
    <string name="view_detail">مشاهده</string>
    <string name="alert_delete">آیا مطمئن به حذف هستید؟</string>

    <string-array name="month_arrays">
        <item>فروردین</item>
        <item>اردیبهشت</item>
        <item>خرداد</item>
        <item>تیر</item>
        <item>مرداد</item>
        <item>شهریور</item>
        <item>مهر</item>
        <item>آبان</item>
        <item>آذر</item>
        <item>دی</item>
        <item>بهمن</item>
        <item>اسفند</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
