<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/addNewJob"
            android:title="@string/add_new_job"
            android:textDirection="anyRtl"/>
        <item
            android:id="@+id/annualReport"
            android:title="@string/annual_report"
            android:textDirection="anyRtl" />
        <item
            android:id="@+id/showJobList"
            android:title="@string/show_job_list"
            android:textDirection="anyRtl" />
        <item
            android:id="@+id/editJobDrawer"
            android:title="@string/edit"
            android:textDirection="anyRtl" />
        <item
            android:id="@+id/monthDetailHour"
            android:title="@string/month_detail_hour"
            android:textDirection="anyRtl" />
    </group>

</menu>