<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/timeStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/enter_time"
        android:textDirection="anyRtl"/>

    <EditText
        android:id="@+id/timeExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/exit_time"
        android:textDirection="anyRtl"/>

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/date"
        android:textDirection="anyRtl"/>

    <Button
        android:text="@string/add"
        android:layout_width="486dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnAddTime"
        />

    <Button
        android:text="@string/cancelAdd"
        android:layout_width="486dp"
        android:layout_height="wrap_content"
        android:id="@+id/cancelAction" />


</LinearLayout>